2006-03-17  Jim Meyering  <jim@meyering.net>

	* regex.m4 (gl_REGEX): Fix typo in last change:
	s/_REGEX_WIDE_OFFSETS/_REGEX_LARGE_OFFSETS/.

2006-03-16  Paul Eggert  <eggert@cs.ucla.edu>

	* regex.m4 (gl_REGEX): Don't check for off_t, since the code
	no longer needs it.  Instead, check that regoff_t is as least
	as wide as ptrdiff_t.

	Don't define _REGEX_WIDE_OFFSETS unless using the included regex,
	so that our regex.h stays compatible with the installed regex.
	This is helpful for installers who configure --without-included-regex.
	Problem reported by Emanuele Giaquinta.

2006-03-12  Jim Meyering  <jim@meyering.net>

	* chdir-safer.m4 (gl_CHDIR_SAFER): Add same-inode.h to the list.
	* cycle-check.m4 (gl_CYCLE_CHECK): Likewise.
	* same.m4 (gl_SAME): Likewise.
	* root-dev-ino.m4 (gl_ROOT_DEV_INO): Likewise.

2006-03-12  Paul Eggert  <eggert@cs.ucla.edu>

	* prereq.m4 (gl_PREREQ): Require gl_TIME_R.
	* time_r.m4: New file, from gnulib.

2006-03-01  Paul Eggert  <eggert@cs.ucla.edu>

	* clock_time.m4 (gl_CLOCK_TIME): Require gl_USE_SYSTEM_EXTENSIONS,
	not merely AC_GNU_SOURCE, for the benefit of Solaris 10 when compiled
	pedantically.
	* nanosleep.m4 (gl_FUNC_NANOSLEEP): Likewise.
	* timespec.m4 (gl_TIMESPEC): Likewise.

	* extensions.m4 (gl_USE_SYSTEM_EXTENSIONS): Use "=" with "test",
	not "==".  Reported by Ralf Wildenhues.

2006-02-22  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* mkdir-p.m4 (gl_MKDIR_PARENTS): Require gl_FUNC_LCHMOD and
	gl_CHDIR_SAFER.

2006-02-16  Eric Blake  <ebb9@byu.net>

	Sync from gnulib.
	* sys_socket_h.m4: New file. Solves 'present but cannot compile'
	warnings on cygwin, which cannot use ws2tcpip.h.
	* socklen.m4 (gl_TYPE_SOCKLEN_T): Use gl_HEADER_SYS_SOCKET.
	Don't use ws2tcpip.h if sys/socket.h works.
	* getaddrinfo.m4 (gl_PREREQ_GETADDRINFO): Use
	gl_HEADER_SYS_SOCKET.
	(gl_GETADDRINFO): Don't use ws2tcpip.h when sys/socket.h is
	present.

2006-02-14  Simon Josefsson  <jas@extundo.com>

	Sync from gnulib.